<resources>
    <string name="app_name">DomowyOgrodnik</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Twoje rośliny</string>
    <string name="title_notifications">Twoje przypomnienia</string>

    <!-- home -->
    <string name="stats_notempty">Liczba dodanych roślin:</string>
    <string name="stats_empty">Nie dodano jeszcze żadnej rośliny</string>

    <!-- plantsfragment -->
    <string name="delete_plant">Usuń</string>
    <string name="add_reminder">Przypomnij</string>
    <string name="add_plant">Dodaj nową roślinę</string>
    <string name="deleted">Usunięto</string>

    <!-- addplant -->
    <string name="photo">Zrób zdjęcie</string>
    <string name="gallery">Wybierz z galerii</string>
    <string name="name">Nazwa</string>
    <string name="description">Opis (opcjonalnie)</string>
    <string name="save_plant">Zapisz</string>

    <!-- remindersfragment & addreminder" -->
    <string name="date">Data</string>
    <string name="time">Czas</string>
    <string name="frequency">Powtarzaj</string>

    <string-array name="dwmy">
        <item>powtarzanie wyłączone</item>
        <item>powtarzaj codziennie</item>
        <item>powtarzaj co tydzień</item>
        <item>powtarzaj co dwa tygodnie</item>
        <item>powtarzaj co miesiąc</item>
        <item>powtarzaj co trzy miesiące</item>
    </string-array>

    <string-array name="chores">
        <item>podlewanie</item>
        <item>przesadzanie</item>
        <item>odkurzanie</item>
        <item>odżywianie</item>
        <item>przycinanie</item>
        <item>zraszanie</item>
        <item>pestycydy</item>
    </string-array>

</resources>