<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/pexels" >

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_photo"
        android:layout_width="180dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/gradient_buttons"
        android:foreground="?android:attr/selectableItemBackground"
        android:text="@string/photo"
        android:textSize="20sp"
        android:theme="@android:style/ThemeOverlay.Material.Dark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_save"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:background="@drawable/gradient_buttons"
        android:foreground="?android:attr/selectableItemBackground"
        android:text="@string/save_plant"
        android:theme="@android:style/ThemeOverlay.Material.Dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_description"
        app:layout_constraintVertical_bias="0.203" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_gallery"
        android:layout_width="180dp"
        android:layout_height="48dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/gradient_buttons"
        android:foreground="?android:attr/selectableItemBackground"
        android:text="@string/gallery"
        android:textSize="20sp"
        android:theme="@android:style/ThemeOverlay.Material.Dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="226dp"
        android:layout_height="295dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText_name"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:layout_marginTop="84dp"
        android:background="@drawable/gradient_textview"
        android:hint="@string/name"
        android:inputType="textVisiblePassword"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="italic"
        android:paddingHorizontal="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/editText_description"
        android:layout_width="320dp"
        android:layout_height="75dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/gradient_textview"
        android:hint="@string/description"
        android:inputType="textVisiblePassword|textMultiLine"
        android:scrollHorizontally="false"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="italic"
        android:paddingHorizontal="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_name" />

</androidx.constraintlayout.widget.ConstraintLayout>
