<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pexels"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_save"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:background="@drawable/gradient_buttons"
        android:foreground="?android:attr/selectableItemBackground"
        android:text="@string/save_plant"
        android:theme="@android:style/ThemeOverlay.Material.Dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner"
        app:layout_constraintVertical_bias="0.614" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/gradient_textview"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_frequency_dwmy"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageView
        android:id="@+id/imageView_dropdown2"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:background="@drawable/ic_dropdown"
        app:layout_constraintBottom_toBottomOf="@+id/spinner"
        app:layout_constraintEnd_toEndOf="@+id/spinner"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/spinner"
        app:layout_constraintTop_toTopOf="@+id/spinner" />


    <TextView
        android:id="@+id/tv_name"
        android:layout_width="210dp"
        android:layout_height="48dp"
        android:layout_marginTop="88dp"
        android:background="@drawable/gradient_textview"
        android:gravity="center"
        android:hint="@string/name"
        android:paddingHorizontal="10dp"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.214"
        app:layout_constraintStart_toEndOf="@+id/imageView_pic"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="210dp"
        android:layout_height="69dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/gradient_textview"
        android:gravity="center"
        android:hint="@string/description"
        android:paddingHorizontal="10dp"
        android:scrollbarThumbVertical="@null"
        android:scrollbars="vertical"
        android:scrollHorizontally="false"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.214"
        app:layout_constraintStart_toEndOf="@+id/imageView_pic"
        app:layout_constraintTop_toBottomOf="@+id/tv_name" />

    <TextView
        android:id="@+id/editText_date"
        android:layout_width="155dp"
        android:layout_height="55dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/gradient_textview"
        android:gravity="center"
        android:paddingHorizontal="15dp"
        android:hint="@string/date"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="italic"
        app:drawableStartCompat="@drawable/ic_calendar"
        app:layout_constraintEnd_toStartOf="@+id/editText_time"
        app:layout_constraintHorizontal_bias="0.807"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_description" />

    <TextView
        android:id="@+id/editText_time"
        android:layout_width="155dp"
        android:layout_height="55dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="44dp"
        android:background="@drawable/gradient_textview"
        android:gravity="center"
        android:paddingHorizontal="15dp"
        android:hint="@string/time"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="italic"
        app:drawableStartCompat="@drawable/ic_time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_description" />

    <Spinner
        android:id="@+id/spinner_frequency_dwmy"
        android:layout_width="320dp"
        android:layout_height="55dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/gradient_textview"
        android:gravity="center"
        android:inputType="number"
        android:paddingHorizontal="10dp"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_time" />

    <ImageView
        android:id="@+id/imageView_dropdown1"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:background="@drawable/ic_dropdown"
        app:layout_constraintBottom_toBottomOf="@+id/spinner_frequency_dwmy"
        app:layout_constraintEnd_toEndOf="@+id/spinner_frequency_dwmy"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/spinner_frequency_dwmy"
        app:layout_constraintTop_toTopOf="@+id/spinner_frequency_dwmy"
        app:layout_constraintVertical_bias="0.55" />

    <ImageView
        android:id="@+id/imageView_pic"
        android:layout_width="101dp"
        android:layout_height="135dp"
        android:layout_marginStart="44dp"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toTopOf="@+id/editText_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/ic_plants" />
</androidx.constraintlayout.widget.ConstraintLayout>
